# vn-stock-trader

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  IMPLEMENTATION_PLAN.md  MARKET_ANALYSIS.md  PACKAGING_PLAN.md  PLUGIN_DESIGN.md  README.md  README_en.md  install.sh  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: market-watcher.md  news-analyst.md  portfolio-manager.md  research-agent.md
.claude/commands/: alert.md  compare.md  portfolio.md  screen.md  trading-session.md
.claude/skills/fundamental-analysis/: SKILL.md
.claude/skills/morning-brief/: SKILL.md
.claude/skills/news-impact/: SKILL.md
.claude/skills/news-update/: SKILL.md
.claude/skills/portfolio-monitor/: SKILL.md
data/: automation_config.json  portfolio.json  watchlist.json
docs/: CLAUDE_EXTENSIONS_GUIDE.md  CLAUDE_FOLDER_STRUCTURE.md  DEEP_REVIEW.md  EXTENSION_AUDIT.md  LOOP_MIGRATION_PLAN.md  PLUGIN_RESEARCH.md  SETUP_AND_INTEGRATION.md
docs/staged/: deploy.sh
mcp-server/: mcp-config.example.json  pyproject.toml  server.py
mcp-server/cache/: cache.py
mcp-server/data_sources/: news_scraper.py  portfolio.py  ta_calculator.py  vietstock_client.py  vnstock_client.py
mcp-server/tests/: conftest.py  test_automation.py  test_cache.py  test_mcp_tools.py  test_portfolio.py  test_ta_calculator.py  test_vnstock_client.py
mcp-server/tools/: financials.py  history.py  insider.py  market.py  news.py  portfolio.py  screener.py
scripts/: morning_brief.py  portfolio_monitor.py  session_summary.py  watchlist_alert.py
(+14 files in other folders)
