[project]
name = "vn-stock-mcp"
version = "0.1.0"
description = "MCP server for Vietnamese stock market data"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "vnstock>=3.4.0",
    "pandas>=2.0.0",
    "pandas-ta>=0.3.14b0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
vn-stock-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
